--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             </div>
             
             <div class="cta-container">
-                <a href="https://precisioncpa.net/schedule-appointment/" class="btn">Schedule Your FREE Consultation</a>
+                <a href="https://precisioncpa.net/contact-us/" class="btn">Schedule Your FREE Consultation</a>
             </div>
         </div>
         
@@ -364,4 +364,5 @@
         </div>
     </div>
 </body>
+
 </html>
